# CookieExplorer

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  main.cpp  main.qml
